update team function, ui

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -347,10 +347,10 @@ p {
   }
 }
 .section-title.section-title-2 span {
-  color: #fff;
+  color: #e6a418;
 }
 .section-title.section-title-2 .title {
-  color: #fff;
+  color: #000000;
 }
 
 /*===========================
