update style for create project

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,8 +97,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
   color: #1b1f2e;
   margin: 0px;
 }
