--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2109,13 +2109,13 @@ p {
   content: "";
   left: 0;
   top: 0;
-  height: 600px;
+  height: fit-content;
   width: 100%;
   background: #f7f7f9;
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .explore-projects-area.explore-projects-page-area::before {
-    height: 520px;
+    height: fit-content;
   }
 }
 
@@ -7817,4 +7817,20 @@ p {
 .badge {
   font-size: 0.8rem;
   padding: 5px 10px;
+}
+
+.image-container {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.image-container.fade {
+  opacity: 0;
+}
+
+.project-video {
+  width: 800px; 
+  height: 450px; 
+  max-width: 100%;
+  margin: 0 auto; 
+  display: block; 
 }
